External command fix