@@ -34,9 +34,7 @@ public class ExternalCommand extends AbstractCommand {
     public CommandResult execute(List<String> input) throws CliException {
         try {
             String[] args = arguments.toArray(new String[0]);
-            Process commandProcess = new ProcessBuilder(args)
-                    .directory(Environment.getCurrentDirectory().toFile())
-                    .start();
+            Process commandProcess = Runtime.getRuntime().exec(args, null, Environment.getCurrentDirectory().toFile());
             FileIO.writeLines(input, commandProcess.getOutputStream());
             commandProcess.getOutputStream().close();
             return new CommandResult(FileIO.readLines(commandProcess.getInputStream()));
